--- a/workspace/Commin_Pig_1000/app/src/main/AndroidManifest.xml
+++ b/workspace/Commin_Pig_1000/app/src/main/AndroidManifest.xml
@@ -8,7 +8,10 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".page.Page4Calendar">
+        <activity android:name=".page.calendar.Page4Calendar">
+
+        </activity>
+        <activity android:name=".page.chart.Page4Chart">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
